# GenAI_Course

./: GenAI_Course_For_You.html  Knowledge_Distillation_Finance_Domain.html  QLoRA_Part1.html  Quantization_in_QLoRA.html  README.md
ANN/: ANN_Practice_Iris_In_Class.ipynb  ANN_Practice_Solutions_Iris_In_Class.ipynb  ANN_Pytorch_Dimensions.ipynb  ANN_Solutions_Pytorch_Diabetes.ipynb  DL_GD_BCE.ipynb  DL_GD_MSE.ipynb  OOP_Perceptron_Classification_ChurnData.ipynb  Pandas_Basics.ipynb  Pandas_Practice.ipynb  Perceptron_Training_Classification.ipynb  Perceptron_Training_Regression_HousingData.ipynb  Simple_Functions.ipynb  house_prices_data.csv
Agents/: README.md  medical_report.md  pyproject.toml
Agents/src/my_medical_crew/: crew.py  main.py
Agents/src/my_medical_crew/config/: agents.yaml  tasks.yaml
Agno_Groq/: News_Agent_Using_Agno.html  README.md  pyproject.toml
MachineLearning/: Churn_Modelling_Data.csv  DecisionTree.ipynb  Linear_Regression.ipynb
SummarizeReports/: main.py  pyproject.toml
Transformers/: Final_P_Transformers_Uppal.ipynb  Final_S_Transformers_Uppal.ipynb  G_GenAI_Machine_Translation_1.ipynb  G_GenAI_Masked_SA.ipynb  G_GenAI_Multi_Head_Attention.ipynb  G_GenAI_Positional_Encoding.ipynb  G_GenAI_Self_Attention.ipynb  G_GenAI_Transformer_Decoder.ipynb  G_GenAI_Transformer_Encoder.ipynb  GenAI_Course_For_You.html  GenAI_Machine_Translation_1.ipynb  GenAI_Text_Preprocessing_WV.ipynb  GenAI_Text_Processing_nn.ipynb  GenAI_Transformer_Decoder.ipynb  GenAI_Transformer_Encoder.ipynb  P_GenAI_LayerNorm.ipynb  P_GenAI_Masked_SA.ipynb  (+14 more)
docker-pdf-summarizer/backend/: .env  Dockerfile  gemini_client.py  main.py  pdf_processor.py  pyproject.toml  requirements.txt
pdf-summarizer/: README.md  prompt_used.txt  pyproject.toml
pdf-summarizer/client/: app.py  main.py  pyproject.toml
pdf-summarizer/src/: main.py
pdf-summarizer/src/models/: __init__.py  schemas.py
pdf-summarizer/src/services/: __init__.py  gemini_service.py  pdf_processor.py
(+9 files in other folders)
