[project]
name = "summarizereports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.19.0",
    "markdown2>=2.5.3",
    "pydantic>=2.11.5",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "weasyprint>=65.1",
]
